[package]
name = "thorc"
version = "0.2.0"
edition = "2021"

[dependencies]
bincode = "1.3"
eframe = "0.27"
egui = "0.27"
enigo = "0.1"
scrap = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }

flate2 = "1.0"
